Re-created accordion on service page

--- a/services.html
+++ b/services.html
@@ -26,6 +26,7 @@
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="main.js" defer></script>
   <script>
     var num = 200; //number of pixels before modifying styles
 
@@ -70,102 +71,173 @@
 <div class="title">
   <h1 class="title">Services</h1>
 </div>
-
 <div class="bottom-line-title"></div>
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h4 class="mb-0">
-        <button class="btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
-          aria-controls="collapseOne">
-          Website Design & Development 
-        </button>
-      </h4>
+
+<div class="accordion">
+<div class="accordion-item">
+<div class="accordion-item-header">
+<h4>Website Design & Development </h4>
+</div>
+<div class="accordion-item-body">
+  <div class="accordion-item-body-content">
+I design static and dynamic websites depending on requirements.<br/>
+ This service includes recommendation on whether a fully coded customised website is required or use of a CMS
+  platform is more suitable.
+  I'll take you through the entire process from createing the layout via wireframes to registering your domain, hosting
+  and publishing your website for the world to see.
+  I pay particular attention to optimising my designs for basic SEO, and I include strong considerations to the user
+  interface and experience (UI/UX).
+
+<div class="tools">
+  <h5> Skills & Tools</h5>
+<div class="row">
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="HTML" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/html.png">
+    <small class="technology">
+      HTML
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="CSS" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/css.png">
+    <small class="technology">
+      CSS
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="Editor" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/editor.png">
+    <small class="technology">
+      Editor
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="GitHub" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/github.png">
+    <small class="technology">
+      GitHub
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="Bootstrap" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/bootstrap.png">
+    <small class="technology">
+      Bootstrap
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="Hosting" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/hosting.png">
+    <small class="technology">
+      Hosting
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="Flexbox" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/flexbox.png">
+    <small class="technology">
+      Flexbox
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="SEO" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/seo.png">
+    <small class="technology">
+      SEO
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="Responsive" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+      src="/images/tools/responsive.png">
+    <small class="technology">
+      Responsive
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="JavaScript" class="img-fluid center block mb-2 pl-3 pr-3 rounded false" src="/images/tools/javascript.png">
+    <small class="technology">
+      JavaScript
+    </small>
+  </div>
+  <div class="col-3 mb-3 p-0 center">
+    <img alt="API" class="img-fluid center block mb-2 pl-3 pr-3 rounded false" src="/images/tools/api.png">
+    <small class="technology">
+      API
+    </small>
+  </div>
+</div>
+
+
+
+
+
+
+ <!-- <ul>
+    <li>
+      <i class="fab fa-html5"></i>
+    </li>
+    <li>
+      <i class="fab fa-css3-alt"></i>
+    </li>
+    <li>
+      <i class="fab fa-js"></i>
+    </li>
+    <li>
+      <i class="fab fa-react"></i>
+    </li>
+    <li>
+      <i class="fab fa-github"></i>
+    </li>
+    <li>
+      <i class="fas fa-cogs"></i>
+    </li>
+    <li>
+      <img src="images/vscode.svg" />
+    </li>
+    <li>
+      <i class="fas fa-phone-laptop"></i>
+    </li>
+    <li>
+
+    </li>
+    <li>
+
+    </li>
+    <li>
+
+    </li>
+
+  </ul>-->
+
+
+</div>
+
+  </div>
+</div>
+</div>
+<div class="accordion-item">
+  <div class="accordion-item-header">
+   <h4> Marketing & Print Design</h4>  
+  </div>
+  <div class="accordion-item-body">
+    <div class="accordion-item-body-content">
+    I provide marketing support and can create catalogues, brochures/leaflets, flyers/posters to promote your business.
+    I can help you create graphics for prints or web use as well as infographics to suit your needs.
     </div>
-
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
-      <div class="card-body">
-        <p>I design static and dynamic websites depending on requirements. </p>
-       <p> This sevice includes recommendation whether a fully coded customised website is required or use of a CMS platform is more suitable. 
-        I'll take you through the entire process from createing the layout via wireframes to registering your domain, hosting and publishing your website for the world to see. 
-        I pay particular attention to optimising my designs for basic SEO, and I include strong considerations to the user interface and experience (UI/UX). 
-        </p>
-<!--<h1> Skills & Tools</h1>
-<div class="tools"> 
-<ul>
-<li>
-  <i class="fab fa-html5"></i>
-</li>
-<li>
-  <i class="fab fa-css3-alt"></i>
-</li>
-<li>
-<i class="fab fa-js"></i>
-</li>
-<li>
-<i class="fab fa-react"></i>
-</li>
-<li>
-<i class="fab fa-github"></i>
-</li>
-<li>
-<i class="fas fa-cogs"></i>
-</li>
-<li>
-<img src="images/vscode.svg"/>
-</li>
-<li>
-<i class="fas fa-phone-laptop"></i>
-</li>
-<li>
-
-</li>
-<li>
-
-</li>
-<li>
-
-</li>
-
-</ul>
-
-</div>-->
-
+  </div>
+</div>
+  <div class="accordion-item">
+    <div class="accordion-item-header">
+      <h4> Visual Identity & Branding</h4>
+    </div>
+    <div class="accordion-item-body">
+      <div class="accordion-item-body-content">
+      I create logo, branding and colour palette to create a brand identity that best represents you.
+        I provide the branding guidelines along with business cards design or letterheads if needed.
       </div>
     </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h4 class="mb-0">
-        <button class="btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
-          aria-controls="collapseTwo"> Marketing & Print Design
-        </button>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
-      <div class="card-body">
-        <p> I provide marketing support and can create catalogues, brochures/leaflets, flyers/posters to promote your business.
-        I can help you create graphics for prints or web use as well as infographics to suit your needs. 
-      </p>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h4 class="mb-0">
-        <button class="btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false"
-          aria-controls="collapseThree">
-          Visual Identity & Branding
-        </button>
-      </h4>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
-      <div class="card-body">
-      <p>I create logo, branding and colour palette to create a brand identity that best represents you.
-      I provide the branding guidelines along with business cards design or letterheads.
-      </p></div>
-    </div>
-  </div>
+</div>
 </div>
 
 
