Added skills to accordion

--- a/services.html
+++ b/services.html
@@ -92,123 +92,90 @@ I design static and dynamic websites depending on requirements.<br/>
   <h5> Skills & Tools</h5>
 <div class="row">
   <div class="col-3 mb-3 p-0 center">
-    <img alt="HTML" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="HTML" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/html.png">
     <small class="technology">
       HTML
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="CSS" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="CSS" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/css.png">
     <small class="technology">
       CSS
     </small>
   </div>
+<div class="col-3 mb-3 p-0 center">
+  <img alt="JavaScript" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+    src="/images/tools/javascript.png">
+  <small class="technology">
+    JavaScript
+  </small>
+</div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="Editor" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="Editor" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/editor.png">
     <small class="technology">
       Editor
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="GitHub" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="GitHub" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/github.png">
     <small class="technology">
       GitHub
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="Bootstrap" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="Bootstrap" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/bootstrap.png">
     <small class="technology">
       Bootstrap
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="Hosting" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="Hosting" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/hosting.png">
     <small class="technology">
       Hosting
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="Flexbox" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="Flexbox" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/flexbox.png">
     <small class="technology">
       Flexbox
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="SEO" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="SEO" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/seo.png">
     <small class="technology">
       SEO
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="Responsive" class="img-fluid center block mb-2 pl-3 pr-3 rounded false"
+    <img alt="Responsive" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/responsive.png">
     <small class="technology">
       Responsive
     </small>
   </div>
   <div class="col-3 mb-3 p-0 center">
-    <img alt="JavaScript" class="img-fluid center block mb-2 pl-3 pr-3 rounded false" src="/images/tools/javascript.png">
-    <small class="technology">
-      JavaScript
-    </small>
-  </div>
-  <div class="col-3 mb-3 p-0 center">
-    <img alt="API" class="img-fluid center block mb-2 pl-3 pr-3 rounded false" src="/images/tools/api.png">
+    <img alt="API" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/api.png">
     <small class="technology">
       API
     </small>
   </div>
+  <!--<div class="col-3 mb-3 p-0 center">
+    <img alt="React" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+      src="/images/tools/react.png">
+    <small class="technology">
+      React
+    </small>
+  </div>-->
 </div>
 
-
-
-
-
-
- <!-- <ul>
-    <li>
-      <i class="fab fa-html5"></i>
-    </li>
-    <li>
-      <i class="fab fa-css3-alt"></i>
-    </li>
-    <li>
-      <i class="fab fa-js"></i>
-    </li>
-    <li>
-      <i class="fab fa-react"></i>
-    </li>
-    <li>
-      <i class="fab fa-github"></i>
-    </li>
-    <li>
-      <i class="fas fa-cogs"></i>
-    </li>
-    <li>
-      <img src="images/vscode.svg" />
-    </li>
-    <li>
-      <i class="fas fa-phone-laptop"></i>
-    </li>
-    <li>
-
-    </li>
-    <li>
-
-    </li>
-    <li>
-
-    </li>
-
-  </ul>-->
 
 
 </div>
@@ -224,7 +191,62 @@ I design static and dynamic websites depending on requirements.<br/>
     <div class="accordion-item-body-content">
     I provide marketing support and can create catalogues, brochures/leaflets, flyers/posters to promote your business.
     I can help you create graphics for prints or web use as well as infographics to suit your needs.
+    
+  <div class="tools">
+    <h5> Skills & Tools</h5>
+    <div class="row">
+      <div class="col-3 mb-3 p-0 center">
+        <img alt="Adobe inDesign" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/indesign.svg">
+        <small class="technology">
+          inDesign
+        </small>
+      </div>
+      <div class="col-3 mb-3 p-0 center">
+        <img alt="Adobe Illustrator" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/illustrator.svg">
+        <small class="technology">
+        Illustrator
+        </small>
+      </div>
+      <div class="col-3 mb-3 p-0 center">
+        <img alt="Adobe Photoshop" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+          src="/images/tools/photoshop.svg">
+        <small class="technology">
+          Photoshop
+        </small>
+      </div>
+      <div class="col-3 mb-3 p-0 center">
+        <img alt="Adobe Fresco" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+          src="/images/tools/mnemonic-Fresco-32x32.svg">
+        <small class="technology">
+          Fresco
+        </small>
+      </div>
+    <div class="col-3 mb-3 p-0 center">
+      <img alt="Adobe XD" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+        src="/images/tools/xd.svg">
+      <small class="technology">
+        XD
+      </small>
     </div>
+    <div class="col-3 mb-3 p-0 center">
+      <img alt="Adobe Acrobat DC" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/acrobat_reader_appicon_noshadow_256.svg">
+      <small class="technology">
+        Acrobat DC
+      </small>
+    </div>
+    <div class="col-3 mb-3 p-0 center">
+      <img alt="Canva" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+        src="/images/tools/canva.png">
+      <small class="technology">
+        Canva
+      </small>
+    </div>
+    </div>
+
+  </div>
+  
+  
+  </div>
   </div>
 </div>
   <div class="accordion-item">
@@ -235,8 +257,32 @@ I design static and dynamic websites depending on requirements.<br/>
       <div class="accordion-item-body-content">
       I create logo, branding and colour palette to create a brand identity that best represents you.
         I provide the branding guidelines along with business cards design or letterheads if needed.
+      <div class="tools">
+        <h5> Skills & Tools</h5>
+        <div class="row">
+                  <div class="col-3 mb-3 p-0 center">
+            <img alt="Adobe Illustrator" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+              src="/images/tools/illustrator.svg">
+            <small class="technology">
+              Illustrator
+            </small>
+          </div>
+          <div class="col-3 mb-3 p-0 center">
+            <img alt="Canva" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/canva.png">
+            <small class="technology">
+              Canva
+            </small>
+          </div>
+          <div class="col-3 mb-3 p-0 center">
+            <img alt="Adobe Fresco" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
+              src="/images/tools/mnemonic-Fresco-32x32.svg">
+            <small class="technology">
+              Fresco
+            </small>
+          </div>
       </div>
     </div>
+      </div>
 </div>
 </div>
 
