Added responsiveness and unified font families

--- a/services.html
+++ b/services.html
@@ -73,7 +73,13 @@
 </div>
 <div class="bottom-line-title"></div>
 
+
+
 <div class="accordion">
+  
+  <div class="service-intro  ">Creafix Design specialises in developing websites and creating eye catching graphics. Click through below to learn
+  more about each service I offer. Contact me if you'd like to discuss a package combining serveral services.
+  </div>
 <div class="accordion-item">
 <div class="accordion-item-header">
 <h4>Website Design & Development </h4>
@@ -285,15 +291,33 @@ I design static and dynamic websites depending on requirements.<br/>
       </div>
 </div>
 </div>
+<div class="accordion-item">
+  <div class="accordion-item-header">
+    <h4> Other</h4>
+  </div>
+  <div class="accordion-item-body">
+    <div class="accordion-item-body-content">
+   I can also help with creating simple motion graphics, packaging design, EDM templates and photo editing. 
+   Get in touch with your requirements to discuss how I can help.
+  </div>
+    </div>
+  </div>
+</div>
 
+<div class="row mt-2 g-0">
+  <div class="col-12  contact-button">
+    <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
+  </div>
+</div>
 
     </body>
 <footer>
-  <div class="social-links d-flex justify-content-center">
-    <!--<a href="#" title="Facebook page"><i class="fab fa-facebook"></i></a>-->
-    <a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i class="fab fa-github"></i></a>
-    <!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
-  </div>
+<div class="social-links d-flex justify-content-center">
+  <a href="https://www.facebook.com/creafixdesign" title="Facebook page"><i class="fab fa-facebook"></i></a>
+  <a href="https://github.com/achevillat/audrey_portfolio.git" title="Github profile"><i class="fab fa-github"></i></a>
+  <!--<a href="#"title="Instagram profile"><i class="fab fa-instagram"></i></a>-->
+  <a href="https://www.linkedin.com/company/creafix-design" title="LinkdIn profile"><i class="fab fa-linkedin"></i></a>
+</div>
 
 </footer>
 </html>
