Updated link in bio to go to services

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 <div class="row mt-2 g-0">
   <div class="col-12  contact-button">
-    <a href="index.html#contact" class="contact-link" title="Contact me">Work with me</a>
+    <a href="services.html" class="contact-link" title="See the services I offer">See the services I offer</a>
   </div>
 </div>
 <div class="top-line-title" id="work"></div>
