--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </title>
   <meta charset="UTF-8" />
   <meta name="description" content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!" >
-
+<link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
