--- a/mywork.html
+++ b/mywork.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="Check out a selection of projects we've worked on!">
-
+<link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
