--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="description"
     content="This is what we do and the services we offer">
-
+<link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
