Added services to Bio

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
           available to take on new freelance work, feel free to reach out and say hello even if you haven't got a project in mind
           yet!
         </p>
-
+          <p class="bio mb-1">
+            I can help with creating beautiful functional websites, eye catching branding and graphics. Click below to learn more.
+          </p>
       </div>
       
     </div>
