Added meta info from google

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <meta name="viewport" content="width-device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="39lnsWINQ7fUCUBEt-z9HrU6ihBVxTcWLhC0KwOmPKc" />
 <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
