Updated meta descriptions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Visual design and web development - Creafix Design
   </title>
   <meta charset="UTF-8" />
-  <meta name="description" content="Welcome to Creafix Design, have a look at what we do and check out a selection of projects we've worked on!" >
+  <meta name="description" content="Creafix Design is a web development and graphic design service provider based in New Zealand. I have experience building websites and e-commerce sites as well as developing brand identities and providing general graphic design services. " >
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
