--- a/mywork.html
+++ b/mywork.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>Check out what I've worked on so far - Creafix Design
+  <title>Check out my previous web development and garphic design projects - Creafix Design
   </title>
 
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Check out a selection of projects we've worked on!">
+    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
