--- a/services.html
+++ b/services.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>The list of services we offer - Creafix Design
+  <title>The list of graphic design and web development services we offer - Creafix Design
   </title>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="This is what we do and the services we offer">
+    content="Creafix Design offers a comprehensive list of expert services to help you build your website or create graphics you need for your business. I create logo and brands and integrate them into beautiful functional websites.">
 <link rel="icon" href="images/Icon small-min.png">
   <link href="src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
