Added Shopify logo to services

--- a/services.html
+++ b/services.html
@@ -173,6 +173,12 @@ I design static and dynamic websites depending on requirements.<br/>
       API
     </small>
   </div>
+    <div class="col-3 mb-3 p-0 center">
+      <img alt="Shopify" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech" src="/images/tools/shopify.png">
+      <small class="technology">
+        Shopify
+      </small>
+    </div>
   <!--<div class="col-3 mb-3 p-0 center">
     <img alt="React" class="img-fluid center block mb-2 pl-3 pr-3 rounded false img-tech"
       src="/images/tools/react.png">
