corrected spelling mistake

--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
 I design static and dynamic websites depending on requirements.<br/>
  This service includes recommendation on whether a fully coded customised website is required or use of a CMS
   platform is more suitable.
-  I'll take you through the entire process from createing the layout via wireframes to registering your domain, hosting
+  I'll take you through the entire process from creating the layout via wireframes to registering your domain, hosting
   and publishing your website for the world to see.
   I pay particular attention to optimising my designs for basic SEO, and I include strong considerations to the user
   interface and experience (UI/UX).
