updated nav bar responsiveness

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png" alt="creafix design logo" width="150"/></a></li>
 <li class="item"> <a href="index.html"title="Homepage">Home</a></li>
 <li class="item"> <a href="about.html"title="About">About</a></li>
-<li class="nav-item dropdown">
+<li class="nav-item dropdown item">
   <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown"
     aria-expanded="false">
     Creative Services
@@ -67,7 +67,7 @@
     <li><a class="dropdown-item" href="creative_services/templates.html">Presentation and proposal template</a></li>
     </ul>
 </li>
-<li class="nav-item dropdown">
+<li class="nav-item dropdown item">
   <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Digital Marketing
   </a>
@@ -79,12 +79,12 @@
     <li><a class="dropdown-item" href="digital_marketing/emailmarketing.html">Email Marketing</a></li>
   </ul>
 </li>
-<li class="nav-item dropdown">
+<li class="nav-item dropdown item">
   <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Web Development
   </a>
   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <li><a class="dropdown-item" href="web_development/web design.html">Web Design</a></li>
+    <li><a class="dropdown-item" href="web_development/webdesign.html">Web Design</a></li>
     <li><a class="dropdown-item" href="web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
     <li><a class="dropdown-item" href="web_development/landingpages.html">Landing Pages</a>
     </li>
