--- a/mywork.html
+++ b/mywork.html
@@ -90,7 +90,7 @@
           Web Development
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="web_development/web design.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="web_development/webdesign.html">Web Design</a></li>
           <li><a class="dropdown-item" href="web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
           <li><a class="dropdown-item" href="web_development/landingpages.html">Landing Pages</a>
           </li>
