--- a/about.html
+++ b/about.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-  <title>The list of graphic design and web development services we offer - Creafix Design
-  </title>
+  <title>The list of graphic design and web development services we offer - Creafix Design </title>
   <meta charset="UTF-8" />
   <meta name="description"
     content="Creafix Design offers a comprehensive list of expert services to help you build your website or create graphics you need for your business. I create logo and brands and integrate them into beautiful functional websites.">
@@ -91,7 +90,7 @@
         Web Development
       </a>
       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="web_development/web design.html">Web Design</a></li>
+        <li><a class="dropdown-item" href="web_development/webdesign.html">Web Design</a></li>
         <li><a class="dropdown-item" href="web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
         <li><a class="dropdown-item" href="web_development/landingpages.html">Landing Pages</a>
         </li>
