--- a/digital_marketing/smmanagement.html
+++ b/digital_marketing/smmanagement.html
@@ -2,20 +2,20 @@
 <html>
 
 <head>
-  <title>The list of graphic design and web development services we offer - Creafix Design
-  </title>
+  <title>Check out my previous web development and garphic design projects - Creafix Design </title>
+
   <meta charset="UTF-8" />
   <meta name="description"
-    content="Creafix Design offers a comprehensive list of expert services to help you build your website or create graphics you need for your business. I create logo and brands and integrate them into beautiful functional websites.">
+    content="Creafix Design has offered support to many businesses and build a wide portfolio of website developement and graphic design.">
   <link rel="icon" href="images/Icon small-min.png">
-  <link href="src/styles.css" rel="stylesheet" type="text/css" />
+  <link href="../src/styles.css" rel="stylesheet" type="text/css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jura:wght@500&display=swap" rel="stylesheet">
@@ -26,7 +26,6 @@
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/b013160931.js" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="main.js" defer></script>
   <script>
     var num = 200; //number of pixels before modifying styles
 
@@ -53,62 +52,71 @@
 </head>
 
 <body>
-<nav>
-  <ul class="menu" id="navbar">
-    <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
-          alt="creafix design logo" width="150" /></a></li>
-    <li class="item"> <a href="index.html" title="Homepage">Home</a></li>
-    <li class="item"> <a href="about.html" title="About">About</a></li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Creative Services
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="creative_services/brandstrategy.html">Branding Strategy</a></li>
-        <li><a class="dropdown-item" href="creative_services/logodesign.html">Logo Design</a></li>
-        <li><a class="dropdown-item" href="creative_services/marketingcollateral.html">Marketing material and
-            collateral</a></li>
-        <li><a class="dropdown-item" href="creative_services/templates.html">Presentation and proposal template</a></li>
-      </ul>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Digital Marketing
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a></li>
-        <li><a class="dropdown-item" href="digital_marketing/smmanagement.html">Social Media Management</a></li>
-        <li><a class="dropdown-item" href="digital_marketing/websitemarketing.html">Website Marketing</a>
-        </li>
-        <li><a class="dropdown-item" href="digital_marketing/emailmarketing.html">Email Marketing</a></li>
-      </ul>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-        aria-expanded="false">
-        Web Development
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="web_development/web design.html">Web Design</a></li>
-        <li><a class="dropdown-item" href="web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
-        <li><a class="dropdown-item" href="web_development/landingpages.html">Landing Pages</a>
-        </li>
-        <li><a class="dropdown-item" href="web_development/websiteaudit.html">Website Audit</a></li>
-      </ul>
-    </li>
-    <li class="item"> <a href="mywork.html" title="My Work">Work</a></li>
+  <nav>
+    <ul class="menu" id="navbar">
+      <li class="logo"> <a href="index.html" title="Homepage logo"><img src="/images/Creafix logo white simple.png"
+            alt="creafix design logo" width="150" /></a></li>
+      <li class="item"> <a href="./../index.html" title="Homepage">Home</a></li>
+      <li class="item"> <a href="./../about.html" title="About">About</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Creative Services
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../creative_services/brandstrategy.html">Branding Strategy</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/logodesign.html">Logo Design</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/marketingcollateral.html">Marketing material and
+              collateral</a></li>
+          <li><a class="dropdown-item" href="./../creative_services/templates.html">Presentation and proposal
+              template</a>
+          </li>
+        </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Digital Marketing
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../digital_marketing/digitalstrategy.html">Digital Marketing Strategy</a>
+          </li>
+          <li><a class="dropdown-item" href="./../digital_marketing/smmanagement.html">Social Media Management</a></li>
+          <li><a class="dropdown-item" href="./../digital_marketing/websitemarketing.html">Website Marketing</a>
+          </li>
+          <li><a class="dropdown-item" href="./../digital_marketing/emailmarketing.html">Email Marketing</a></li>
+        </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Web Development
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" href="./../web_development/webdesign.html">Web Design</a></li>
+          <li><a class="dropdown-item" href="./../web_development/seo.html">Search Engine Optimisation (SEO)</a></li>
+          <li><a class="dropdown-item" href="./../web_development/landingpages.html">Landing Pages</a>
+          </li>
+          <li><a class="dropdown-item" href="./../web_development/websiteaudit.html">Website Audit</a></li>
+        </ul>
+      </li>
+      <li class="item"> <a href="./../mywork.html" title="My Work">Work</a></li>
 
-    <li class="item"> <a href="index.html#contact" title="Contact me">Contact</a></li>
-    <li class="toggle"> <span class="bars"></span></li>
+      <li class="item"> <a href="./../index.html#contact" title="Contact me">Contact</a></li>
+      <li class="toggle"> <span class="bars"></span></li>
 
 
-  </ul>
-</nav>
+    </ul>
+  </nav>
 
-  <h1> Hello world</h1>
-  </body>
+  <div class="top-line-title" id="about"></div>
+  <div class="title">
+    <h1 class="title">Projects</h1>
+  </div>
+</body>
+<footer>
+
+
 </footer>
 
 </html>
